--- a/SpringRegistrationForm/src/main/resources/application.properties
+++ b/SpringRegistrationForm/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=beetroot@007
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
